# KrampUI

./: README.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: main.js
src/assets/scripts/: main.js
