[package]
name = "krampui"
version = "1.1.6"
authors = ["Snipcola"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "system-tray", "api-all"] }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1", features = ["derive"] }
sysinfo = "0.30.7"
rdev = "0.5.3"
ws = "0.9.2"
lazy_static = "1.4.0"
colored = "2.1.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
